@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.com.danieldomingues.itau</groupId>
@@ -19,7 +18,6 @@
         <jacoco.version>0.8.12</jacoco.version>
         <maven.surefire.version>3.2.5</maven.surefire.version>
         <maven.failsafe.version>3.2.5</maven.failsafe.version>
-
         <!-- Encodings explícitos -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -132,7 +130,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Resources -->
+            <!-- Resources (garante UTF-8 em cópia de recursos) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -207,7 +205,7 @@
                         </configuration>
                     </execution>
 
-                    <!-- HTML/XML report merging UT+IT -->
+                    <!-- Report (single module) -->
                     <execution>
                         <id>report</id>
                         <phase>verify</phase>
@@ -275,7 +273,8 @@
                     <excludes>
                         <exclude>**/*IT.java</exclude>
                     </excludes>
-                    <argLine>${jacoco.ut.argLine}</argLine>
+                    <!-- Suprime avisos do JDK 21 nos testes -->
+                    <argLine>${jacoco.ut.argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                     <useSystemClassLoader>true</useSystemClassLoader>
                 </configuration>
             </plugin>
@@ -289,7 +288,8 @@
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
-                    <argLine>${jacoco.it.argLine}</argLine>
+                    <!-- Suprime avisos do JDK 21 nos testes de integração -->
+                    <argLine>${jacoco.it.argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                 </configuration>
                 <executions>
                     <execution>
